--- a/Tablette/BreakFreeTelephone/package.json
+++ b/Tablette/BreakFreeTelephone/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^5.14.18",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-camera": "^4.2.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "socket.io-client": "^4.7.2"
