--- a/Tablette/BreakFreeTelephone/package.json
+++ b/Tablette/BreakFreeTelephone/package.json
@@ -19,6 +19,8 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "socket.io-client": "^4.7.2"
