--- a/CasqueVR/TD1 Multi/Packages/manifest.json
+++ b/CasqueVR/TD1 Multi/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.google.xr.cardboard": "https://github.com/googlevr/cardboard-xr-plugin.git",
+    "com.itisnajim.socketiounity": "https://github.com/itisnajim/SocketIOUnity.git",
     "com.unity.collab-proxy": "2.0.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.18",
