--- a/Tablette/BreakFreeTelephone/package.json
+++ b/Tablette/BreakFreeTelephone/package.json
@@ -23,7 +23,9 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "socket.io-client": "^4.7.2"
+    "react-native-uuid": "^2.0.1",
+    "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,6 +36,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.7",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
