--- a/Tablette/BreakFreeTelephone/package.json
+++ b/Tablette/BreakFreeTelephone/package.json
@@ -23,6 +23,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-sound": "^0.11.2",
     "react-native-uuid": "^2.0.1",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1"
